--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^18.7.3",
     "@react-native-firebase/auth": "^18.7.3",
@@ -30,10 +31,13 @@
     "react-native-animatable": "^1.4.0",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-gifted-chat": "^2.4.0",
     "react-native-image-picker": "^7.1.0",
     "react-native-safe-area-context": "^4.8.0",
     "react-native-screens": "^3.29.0",
-    "react-native-vector-icons": "^10.0.2"
+    "react-native-vector-icons": "^10.0.2",
+    "socket.io": "^4.7.4",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
