--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "extends": "@react-native/typescript-config/tsconfig.json",
   "compilerOptions": {
-    "types": ["@ant-design/icons"]
+    "types": ["@ant-design/icons"],
+
+    "jsx": "react-native"
   }
 }
